fix(blog): use @next/mdx to render posts

--- a/apps/blog/src/app/blog/2024/ai-intro/page.mdx
+++ b/apps/blog/src/app/blog/2024/ai-intro/page.mdx
@@ -11,14 +11,14 @@ export const metadata = {
 
 # OpenAI
 
-- [AI Products](#ai-products)
-- [GPT-3](#gpt-3)
-- [Process](#process)
-- [Embedding](#embedding)
-- [Concepts](#concepts)
-- [DALL-E](#dall-e)
-  - [Model architecture(DALL-E)](#model-architecturedall-e)
-- [Refs](#refs)
+- [AI Products](#AI%20Products)
+- [GPT-3](#GPT-3)
+- [Process](#Process)
+- [Embedding](#Embedding)
+- [Concepts](#Concepts)
+- [DALL-E](#DALL-E)
+  - [Model architecture(DALL-E)](<#Model%20architecture(DALL-E)>)
+- [Refs](#Refs)
 
 ## AI Products
 
